Bug 425765 - vertical scrolling is broken for input devices with a horizontal component to scroll direction (e.g. touchpads, trackpoints)
Summary: vertical scrolling is broken for input devices with a horizontal component to...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: history (other bugs)
Version First Reported In: 20.08.0
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 425456 425782 426212 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-08-25 01:51 UTC by hyiltiz
Modified: 2020-09-05 17:20 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08.2
Sentry Crash Report:


Attachments
Handle diagonal scrolling (946 bytes, text/plain)
2020-08-30 14:19 UTC, Gabriele
Details
handle diagonal scrolling; fixed for konsole-20.08.1 (906 bytes, patch)
2020-09-05 02:11 UTC, Kevin Wilson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description hyiltiz 2020-08-25 01:51:48 UTC
When scrolling with a mouse scroll wheel, it doesn't stutter as long as u keep scrolling. However, with a touchpad (on an MacBook Pro), once your fingers stop sliding, it stops scrolling immediately, while EVERYWHERE else in the system the scrolls have some "inertia" so it still scrolls while you move your hand back to keep scrolling, aka lifting the fingers from the touchpad now immediately stops scrolling in Konsole.

Something is making scrolling non-smooth and that something showed up coincidentally with that blue fringe feature; I disabled "Highlight the lines coming into view" option to disable the blue fringes, but the stuttered scrolling continued. So it may just be a coincidence.

http://ix.io/2v80

Konsole version: konsole 20.08.0
Comment 1 Roberto 2020-08-25 09:27:51 UTC
I confirm the issue on konsole 20.08.0.

Using touchpad there is a major stuttering during scrolling, while with buttons (shift + up/down/pageup/pagedown) it's all smooth.

I've tried to disable composite rendering but it does not help.
Comment 2 Gabriele 2020-08-30 14:19:25 UTC
Created attachment 131289 [details]
Handle diagonal scrolling

Hi, I found the problem and fixed it. Unfortunately I forgot my password and username, apparently the email alone is not enough to recover the password, so I'll just attach the patch here with a temp account I've just created. Hopefully I'll be able to recover my credentials.
Comment 3 Kevin Wilson 2020-09-05 02:11:04 UTC
Created attachment 131425 [details]
handle diagonal scrolling; fixed for konsole-20.08.1

(In reply to Gabriele from comment #2)
> Created attachment 131289 [details]
> Handle diagonal scrolling
> 
> Hi, I found the problem and fixed it. Unfortunately I forgot my password and
> username, apparently the email alone is not enough to recover the password,
> so I'll just attach the patch here with a temp account I've just created.
> Hopefully I'll be able to recover my credentials.

I confirm that (a) the problem still exists in konsole-20.08.1, and (b) your patch solves it.  Great!  Thanks for tracking down the bug.  The patch needed a minor change because since the last konsole release, the file TerminalDisplay.cpp moved out of the subdirectory in which it used to live.

I've attached a modified version that applies to konsole-20.08.1, leaving all of the original author's information unaltered.
Comment 4 Kevin Wilson 2020-09-05 02:16:42 UTC
*** Bug 425456 has been marked as a duplicate of this bug. ***
Comment 5 Kevin Wilson 2020-09-05 07:50:04 UTC
*** Bug 425782 has been marked as a duplicate of this bug. ***
Comment 6 Kurt Hindenburg 2020-09-05 14:42:10 UTC
Git commit 23024d4b0adda7d5b77560565f6163c285429816 by Kurt Hindenburg, on behalf of Gabriele Mazzotta.
Committed on 05/09/2020 at 14:41.
Pushed by hindenburg into branch 'master'.

Fix vertical scrolling with touchpads and trackpoints.

In case of diagonal scrolling, which can happen when using touchpads,
'x' is not zero.
FIXED-IN: 20.08.2

M  +1    -1    src/widgets/TerminalDisplay.cpp

https://invent.kde.org/utilities/konsole/commit/23024d4b0adda7d5b77560565f6163c285429816
Comment 7 Kurt Hindenburg 2020-09-05 14:42:37 UTC
Thanks a lot for the research and patch.
Comment 8 Kurt Hindenburg 2020-09-05 15:11:07 UTC
Git commit a1d843f92d445448a9193a6d28a36d0cba5a1940 by Kurt Hindenburg, on behalf of Gabriele Mazzotta.
Committed on 05/09/2020 at 15:08.
Pushed by hindenburg into branch 'release/20.08'.

Fix vertical scrolling with touchpads and trackpoints.

In case of diagonal scrolling, which can happen when using touchpads,
'x' is not zero.
FIXED-IN: 20.08.2
(cherry picked from commit 23024d4b0adda7d5b77560565f6163c285429816)

M  +1    -1    src/TerminalDisplay.cpp

https://invent.kde.org/utilities/konsole/commit/a1d843f92d445448a9193a6d28a36d0cba5a1940
Comment 9 Kevin Wilson 2020-09-05 17:20:30 UTC
*** Bug 426212 has been marked as a duplicate of this bug. ***