Fix vertical scrolling with touchpads and trackpoints.

In case of diagonal scrolling, which can happen when using touchpads,
'x' is not zero.

BUG: 425765
FIXED-IN: 20.08.2